@@ -31,6 +31,39 @@ ewl_radiobutton_new(char *label)
 }
 
 void
+ewl_radiobutton_set_chain(Ewl_Widget * w, Ewl_Widget * c)
+{
+	Ewl_RadioButton * rb, * crb;
+
+	DENTER_FUNCTION;
+	DCHECK_PARAM_PTR("w", w);
+	DCHECK_PARAM_PTR("c", c);
+
+	rb = EWL_RADIOBUTTON(w);
+	crb = EWL_RADIOBUTTON(c);
+
+	/* If a chain doesnt exist, create one */
+	if (!crb->chain)
+	  {
+		crb->chain = ewd_list_new();
+
+		rb->chain = crb->chain;
+
+		ewd_list_append(crb->chain, w);
+		ewd_list_append(crb->chain, c);
+	  }
+	else
+	  {
+		rb->chain = crb->chain;
+
+		if (!ewd_list_goto(crb->chain, w))
+			ewd_list_append(crb->chain, w);
+	  }
+
+	DLEAVE_FUNCTION;
+}
+
+void
 ewl_radiobutton_init(Ewl_RadioButton * rb, char *label)
 {
 	Ewl_CheckButton * cb;
@@ -55,15 +88,36 @@ void
 __ewl_radiobutton_mouse_down(Ewl_Widget * w, void *ev_data, void *user_data)
 {
 	Ewl_CheckButton * cb;
+	Ewl_RadioButton * rb;
+	int oc;
 
 	DENTER_FUNCTION;
 	DCHECK_PARAM_PTR("w", w);
 
 	cb = EWL_CHECKBUTTON(w);
+	rb = EWL_RADIOBUTTON(w);
+	oc = cb->checked;
+
+	if (rb->chain && !ewd_list_is_empty(rb->chain))
+	  {
+		Ewl_CheckButton * c;
+
+		ewd_list_goto_first(rb->chain);
+
+		while ((c = ewd_list_next(rb->chain)) != NULL)
+		  {
+			c->checked = 0;
+
+			__ewl_radiobutton_update_check(EWL_WIDGET(c));
+		  }
+	  }
 
 	cb->checked = 1;
 
 	__ewl_radiobutton_update_check(w);
+
+	if (oc != cb->checked)
+		ewl_callback_call(w, EWL_CALLBACK_VALUE_CHANGED);
 
 	DLEAVE_FUNCTION;
 }
