@@ -1,9 +1,4 @@
 
-/*
- * The button class is a basic button with a label. This class is inherited by
- * the check button and radio button classes.
- */
-
 #ifndef __EWL_RADIOBUTTON_H__
 #define __EWL_RADIOBUTTON_H__
 
@@ -17,8 +12,6 @@ struct _ewl_radiobutton {
 
 Ewl_Widget *ewl_radiobutton_new(char *l);
 
-/* 1 for checked and 0 for not checked. */
-void ewl_radiobutton_set_checked(Ewl_Widget * w, int c);
-void ewl_radiobutton_set_chain(Ewl_Widget * w, Ewd_List * chain);
+void ewl_radiobutton_set_chain(Ewl_Widget * w, Ewl_Widget * c);
 
 #endif				/* __EWL_RADIOBUTTON_H__ */
