@@ -1,3 +1,10 @@
+Thu Sep  06 04:36:46 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
+	* Added
+	    void ewl_radiobutton_set_chain(Ewl_Widget * w, Ewl_Widget * c)
+	  to set which chain the radio button should belong to.
+	* Made the Ewl_CheckButton & Ewl_RadioButton call
+	    EWL_CALLBACK_VALUE_CHANGED when the checked state has changed.
+
 Thu Sep  06 03:01:56 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
 	* Made the Ewl_CheckButton & Ewl_RadioButton use  Nathan's new code.
 	* Created new ebits for the Ewl_Button, Ewl_CheckButton &
